--- a/dev/templates/benefits.pug
+++ b/dev/templates/benefits.pug
@@ -63,3 +63,4 @@ block content
 								strong Deductible:
 								span $0 per policy period (depending on your service plan level)
 						h3.block-title Filing a Claim
+	include footer-profile
