--- a/dev/templates/home-credit.pug
+++ b/dev/templates/home-credit.pug
@@ -222,9 +222,4 @@ block content
 								| If you need assistance, our support team is here to help you with
 								| any questions or concerns you may have.
 							a.btn Get Help
-
-
-
-
-
-
+	include footer-profile
