--- a/dev/templates/lost.pug
+++ b/dev/templates/lost.pug
@@ -60,4 +60,4 @@ block content
 							p.lost-item_text
 								| A police report may be helpful in disputing fraudulent charges if necessary.
 		script(src='/front.js' type='module')
-
+	include footer-profile
