--- a/dev/templates/notifications.pug
+++ b/dev/templates/notifications.pug
@@ -5,7 +5,7 @@ append vars
 block content
 	.row.profile-row
 		include template/aside-profile
-		main
+		main.notifications
 			section.profile-content
 				h1.title Notifications
 				.profile-table-details
