--- a/dev/templates/profile.pug
+++ b/dev/templates/profile.pug
@@ -40,7 +40,7 @@ block content
 									td Doe
 									td john@aol.com
 									td.table-actions
-										button.btn-table
+										button.btn-table(data-click="front:showForm" data-popup="#member-popup")
 											svg
 												use(xlink:href='/img/sprite.svg#delete')
 								tr
@@ -48,7 +48,7 @@ block content
 									td Doe
 									td john@aol.com
 									td.table-actions
-										button.btn-table
+										button.btn-table(data-click="front:showForm" data-popup="#member-popup")
 											svg
 												use(xlink:href='/img/sprite.svg#delete')
 								tr
@@ -56,7 +56,7 @@ block content
 									td Doe
 									td john@aol.com
 									td.table-actions
-										button.btn-table
+										button.btn-table(data-click="front:showForm" data-popup="#member-popup")
 											svg
 												use(xlink:href='/img/sprite.svg#delete')
 	include footer-profile
