--- a/dev/templates/report.pug
+++ b/dev/templates/report.pug
@@ -103,3 +103,4 @@ block content
 					| Address: 10410 W PRAIRIE HILLS CIR, SUN CITY, AZ 85351 1821
 					br
 					| County: MARICOPA
+	include footer-profile
