--- a/dev/templates/signup.pug
+++ b/dev/templates/signup.pug
@@ -26,3 +26,4 @@ block content
 						.login-form-actions
 							span Already a member?
 							a(href='/login').link Sign In
+	include template/footer
