--- a/dev/templates/support.pug
+++ b/dev/templates/support.pug
@@ -18,7 +18,7 @@ block content
 							| If you need assistance, feel free to contact us via phone or email. We're here to help with any questions or concerns you may have.
 						ul.list
 							li.list-item
-								span Call us:
+								span Call us:&nbsp;
 								strong  855-200-6788
 							li.list-item
 								span Email us: 
@@ -51,4 +51,4 @@ block content
 							.change-buttons
 								button.btn.-blue.-full Submit
 		script(src='/front.js' type='module')
-
+	include footer-profile
