--- a/dev/templates/template/aside-profile.pug
+++ b/dev/templates/template/aside-profile.pug
@@ -1,13 +1,13 @@
 aside.profile-aside
 	nav.profile-aside-nav
-		a(href='/profile.html').profile-aside-item.active
+		a(href='/profile.html').profile-aside-item
 			svg
 				use(xlink:href='/img/sprite.svg#add')
 			span Add Memeber
-		a(href='/details.html').profile-aside-item
+		a(href='/details.html').profile-aside-item.active
 			svg
 				use(xlink:href='/img/sprite.svg#person')
-			span Acoount Details
+			span Account Details
 		a(href='/membership.html').profile-aside-item
 			svg
 				use(xlink:href='/img/sprite.svg#beenhere')
