--- a/dev/templates/template/footer.pug
+++ b/dev/templates/template/footer.pug
@@ -1,12 +1,4 @@
-footer.foot
-	.section
-		.row
-			.foot-site
-				a(href='#') identimaxx.com
-			nav.footer-menu
-				a(href='#') Privacy Policy
-				a(href='#') Terms of Service
-				a(href='#') Support
-			.foot-copy
-				| © Identimaxx 2024. All rights reserved.
+footer.footer
+	.copy
+		span © Identimaxx 2024. All rights reserved.
 	script(src='/front.js' type='module')
