--- a/dev/templates/vault.pug
+++ b/dev/templates/vault.pug
@@ -82,7 +82,6 @@ block content
 												use(xlink:href='/img/sprite.svg#two_pager')
 										.vault-accordeon-item_title Passport
 										button.vault-accordeon-item_arr
-									.vault-accordeon-item_body
 
 
 
@@ -166,4 +165,4 @@ block content
 						input(type='text')
 				.change-buttons.change-buttons-update
 					button.btn.-blue.-full Submit
-
+	include footer-profile
