--- a/dev/templates/404.pug
+++ b/dev/templates/404.pug
@@ -14,4 +14,4 @@ block content
                     span Back To Homepage
 
         script(src='/front.js' type='module')
-
+    include template/footer
