--- a/dev/templates/forgot.pug
+++ b/dev/templates/forgot.pug
@@ -16,3 +16,4 @@ block content
 						button.btn.-blue.-full.forgot-btn
 							span Submit
 						a.link(href='/reset.html') Back
+	include template/footer
