--- a/dev/templates/home.pug
+++ b/dev/templates/home.pug
@@ -213,7 +213,7 @@ block content
                                 | If you need assistance, our support team is here to help you with
                                 | any questions or concerns you may have.
                             a.btn Get Help
-
+    include footer-profile
 
 
 
