--- a/dev/templates/identity-filter.pug
+++ b/dev/templates/identity-filter.pug
@@ -171,7 +171,7 @@ block content
 						button.btn.-full.-blue.identity-more
 							| Load More
 					.identity-right
-
+	include footer-profile
 
 
 
