--- a/dev/templates/identity.pug
+++ b/dev/templates/identity.pug
@@ -105,7 +105,7 @@ block content
 						button.btn.-full.-blue.identity-more
 							| Load More
 					.identity-right
-
+	include footer-profile
 
 
 
