--- a/dev/templates/membership.pug
+++ b/dev/templates/membership.pug
@@ -7,7 +7,7 @@ block content
 		include template/aside-profile
 		main.details
 			section.profile-content
-				h1.title Membership
+				h1.title.mem-title Membership
 				.profile-table-details
 					h2.block-title Plan
 					.table-cont.profile-table.profile-table-membership.details-table
