--- a/dev/templates/title-monitoring.pug
+++ b/dev/templates/title-monitoring.pug
@@ -259,4 +259,4 @@ block content
 						input(type='text')
 				.change-buttons.change-buttons-update
 					button.btn.-blue.-full Submit
-
+	include footer-profile
