--- a/dev/templates/vault-other.pug
+++ b/dev/templates/vault-other.pug
@@ -135,4 +135,4 @@ block content
 						input(type='text')
 				.change-buttons.change-buttons-update
 					button.btn.-blue.-full Submit
-
+	include footer-profile
