--- a/dev/templates/identity-filter.pug
+++ b/dev/templates/identity-filter.pug
@@ -26,70 +26,57 @@ block content
 									use(xlink:href='/img/sprite.svg#chevron_right')
 							span.select-body.-active
 								.select-body_item
-									label
+									label.checkbox
 										input(type='checkbox')
-										strong
-									span Address
+										span Address
 								.select-body_item
-									label
+									label.checkbox
 										input(type='checkbox')
-										strong
-									span Phone
+										span Phone
 								.select-body_item
-									label
+									label.checkbox
 										input(type='checkbox')
-										strong
-									span Name
+										span Name
 								.select-body_item
-									label
+									label.checkbox
 										input(type='checkbox')
-										strong
-									span Credit
+										span Credit
 								.select-body_item
-									label
+									label.checkbox
 										input(type='checkbox')
-										strong
-									span Criminal
+										span Criminal
 								.select-body_item
-									label
+									label.checkbox
 										input(type='checkbox')
-										strong
-									span Internet
+										span Internet
 								.select-body_item
-									label
+									label.checkbox
 										input(type='checkbox')
-										strong
-									span Payday Loan
+										span Payday Loan
 								.select-body_item
-									label
+									label.checkbox
 										input(type='checkbox')
-										strong
-									span Social
+										span Social
 								.select-body_item
-									label
+									label.checkbox
 										input(type='checkbox')
-										strong
-									span Bankruptcy
+										span Bankruptcy
 								.select-body_item
-									label
+									label.checkbox
 										input(type='checkbox')
-										strong
-									span Death
+										span Death
 								.select-body_item
-									label
+									label.checkbox
 										input(type='checkbox')
-										strong
-									span Location
+										span Location
 								.select-body_item
-									label
+									label.checkbox
 										input(type='checkbox')
-										strong
-									span Initial
+										span Initial
 								.select-body_item
-									label
+									label.checkbox
 										input(type='checkbox')
-										strong
-									span Other
+										span Other
 
 						ul.identity-list
 							li.white-block-list-item
