--- a/dev/templates/lost.pug
+++ b/dev/templates/lost.pug
@@ -4,7 +4,7 @@ append vars
 		page_title = 'My Vault'
 block content
 	main
-		section.vault
+		section.vault.lost
 			.section.home-section
 				.breads
 					a(href='#').breads-item.-home Home
