--- a/dev/templates/template/header.pug
+++ b/dev/templates/template/header.pug
@@ -93,7 +93,6 @@ header.head
 									use(xlink:href='/img/sprite.svg#add')
 								span.head-mobile-subitem_value
 									| Add Family Member
-
 					.head-actions-link.head-menu_item.-dropdown.head-actions-user
 						svg
 							use(xlink:href='/img/sprite.svg#account_circle')
@@ -192,3 +191,23 @@ header.head
 								| Benefits
 					li.head-mobile-menu_item.head-menu_item
 						a(href='#') Support
+				ul.head-mobile-info
+					li.head-actions-link.head-mobile-info_item.head-menu_item.-dropdown
+						a(href='#') John Doe
+						span
+							svg
+								use(xlink:href='/img/sprite.svg#more')
+					li.home-row_info
+						span My Protection:
+						strong  Active
+					li.home-row_info
+						span Account Type:
+						strong  Family
+					li.home-row_info
+						span Last Login Date:
+						span  03/15/2024
+					li.head-mobile-info-button
+						button.btn.-blue.-plus.-white-color.link
+							svg
+								use(xlink:href='/img/sprite.svg#add')
+							span Add Family Member
