--- a/dev/templates/title-monitoring.pug
+++ b/dev/templates/title-monitoring.pug
@@ -172,7 +172,7 @@ block content
 					.identity-right
 						.block.-small.-pb0
 							h2.block-title Properties Monitored
-							.table-cont.profile-table
+							.table-cont.profile-table.-vis
 								table.table
 									thead
 										tr
