--- a/dev/stylus/vars.styl
+++ b/dev/stylus/vars.styl
@@ -7,6 +7,7 @@
   --plight_gray: getRgb(#ECECEC)
   --pwhite: getRgb(#fff)
   --pblack: getRgb(#000)
+  --palewhite: getRgb(#FAFBFC)
 
   --uwhite: getRgb(#FAFBFC)
   --ublue: getRgb(#5A8CFF)
@@ -34,3 +35,4 @@ $uorange = var(--uorange)
 $uyellow = var(--uyellow)
 $ugreen = var(--ugreen)
 $udark_green = var(--udark_green)
+$palewhite = var(--palewhite)
