--- a/dev/templates/login.pug
+++ b/dev/templates/login.pug
@@ -2,6 +2,7 @@ extends template/main
 append vars
 	-
 		page_title = 'Login'
+		adheader=true
 block content
 	main
 		section.login
@@ -13,12 +14,12 @@ block content
 						label.inpt.-full
 							input(type='email' placeholder='Email')
 						label.inpt.-full
-							input(type='password' placeholder='Password')
-							button.btn-eye
+							input(type='password' placeholder='Password' id="pwd")
+							button.btn-eye(data-click="front:showPassword" type='button' data-for="#pwd")
 								svg
 									use(xlink:href='/img/sprite.svg#eye')
 						.tar
-							a.link(href='/reset.html') Forgot Password
+							a.link(href='/reset.html') Forgot Password?
 						button.btn.-blue.-full
 							span Sign In
 						.login-form-actions
