--- a/dev/templates/footer-profile.pug
+++ b/dev/templates/footer-profile.pug
@@ -46,13 +46,13 @@ footer.foot
 				h5.title-popup.block-title Change password
 				form.change-form
 					label.inpt.change-inpt
-						input(type='password' placeholder='Enter new password')
-						button.btn-eye
+						input(type='password' placeholder='Enter new password' id='pwd')
+						button.btn-eye(data-click='front:showPassword' data-for='#pwd')
 							svg
 								use(xlink:href='/img/sprite.svg#eye')
 					label.inpt.change-inpt
-						input(type='password' placeholder='Confirm new password')
-						button.btn-eye
+						input(type='password' placeholder='Confirm new password' id='npwd')
+						button.btn-eye.btn-eye(data-click='front:showPassword' data-for='#npwd')
 							svg
 								use(xlink:href='/img/sprite.svg#eye')
 					.change-buttons
@@ -91,19 +91,21 @@ footer.foot
 						.inpt.-full
 							span.inpt-placeholder Billing street address
 							input(type='text')
-					.change-row
-						.inpt.-full
-							span.inpt-placeholder Billing street address (Line 2)(optional)
-							input(type='text')
 					.row.change-row
 						.inpt
 							span.inpt-placeholder State
-							label.select.change-select
+							label.select.change-select(data-click='front:openSelect')
 								span.select-head
-									span.select-option &nbsp;
+									span.select-option Florida
 									svg
 										use(xlink:href='/img/sprite.svg#chevron_right')
 								span.select-body
+									span.select-body-item.-active
+										strong Florida
+									span.select-body-item
+										strong Florida
+									span.select-body-item
+										strong Florida
 						.inpt
 							span.inpt-placeholder Zip Code
 							input(type='text')
